--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,8 @@
 .navbar {
     width: 100%;
     height: 70px;
-    background-color: darkblue;
+    background-color: #15023a;
+    position: fixed;
+    top: 0;
+    z-index: 2;
 }
